# prompt-bench

./: AGENT.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: HOMEBREW.md
src/prompt_bench/: __init__.py  cli.py  core.py
tests/: test_core.py
