[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-bench"
version = "0.1.0"
description = "Benchmarking tool for comparing prompts across models and scenarios."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "erron.ai"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/erron-ai/prompt-bench"
Issues = "https://github.com/erron-ai/prompt-bench/issues"

[project.scripts]
prompt-bench = "prompt_bench.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
